force-app/main/default/objects/PDRI__Managed_Environment__c/PDRI__Managed_Environment__c.object-meta.xml
<CustomObject>
    <label>Managed Environment</label>
    <nameField>
        <displayFormat>ME-{0}</displayFormat>
        <label>Managed Environment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Environments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>