force-app/main/default/objects/PDRI__Managed_Environment__c/fields/PDRI__Label__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Label__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Environment Label</label>
    <referenceTo>PDRI__Managed_Environment_Label__c</referenceTo>
    <relationshipLabel>Managed Environments</relationshipLabel>
    <relationshipName>Managed_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>